--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 }
 
 .header {
+    width: 100vw;
     padding: 5rem 20rem 3rem 10rem;
     background-color: var(--beige);
     box-shadow: 0 0 0.5rem 0 rgb(0, 0, 0, 0.4);
@@ -72,19 +73,29 @@ button {
 }
 
 table {
-    width: 100%;
+    width: 80rem;
     border-collapse: collapse;
     table-layout: fixed;
 }
 
-thead {
-    font-size: 1.5rem;
+.books-header {
+    position: sticky;
+    top: 2rem;
+    background-color: var(--beige);
 }
 
-th, td {
-    border-bottom: 1px solid black;
-    padding-right: 3rem;
+thead {
+    font-size: 1.5rem;
+    position: sticky;
+    top: 0;
+    background-color: var(--grey);
+    box-shadow: inset 0 -1px 0 #000000;
 }
+
+td {
+    border-bottom: 1px solid black;
+}
+
 
 
 th {
@@ -107,7 +118,18 @@ td {
     width: 20rem;
 }
 
+.read {
+    background-color: rgb(0, 255, 0, 0.3);
+}
+
+.read:hover {
+    background-color: rgb(0, 255, 0, 0.5);
+}
 tr > td:last-child > button {
     background-color: var(--peach);
     width: 3rem;
+}
+
+tr > td:last-child > button:hover {
+    opacity: 0.8;
 }
